# DesktopTools

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json
scripts/: fetch-cwebp-sidecars.mjs  generate-clear-windows-icon.ps1
src/: App.css  App.tsx  index.css  tool-registry.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  compress.rs  main.rs  pdf_tools.rs  png.rs  svg.rs
src/components/: PdfTool.tsx  PngCompressTool.tsx  SvgExportTool.tsx
src/lib/: format.ts  tauri.ts  types.ts
